--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,23 @@ spring.thymeleaf.cache: false
 
 spring.main.banner-mode=off
 
-spring.datasource.platform=h2
+# Datasource
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+spring.datasource.username=admin
+spring.datasource.password=admin123
+spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:/tmp/demo_sm/db
+
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 console
+spring.h2.console.enabled=true 
+spring.h2.console.path=/h2
+
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+metrics.csvfile=/var/tmp/successmetrics.csv
 
